# marsha_examples

./: .gitignore  README.md  dockerfile_marsha_examples
marsha_cell_description/: CMakeLists.txt  package.xml
marsha_cell_description/config/: kin_conf_ur10e.yaml  scene_objects.yaml  view_cell.rviz
marsha_cell_description/urdf/: marsha_cell.urdf.xacro
marsha_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
marsha_cell_moveit_config/config/: gazebo_marsha_cell.urdf  marsha_cell.srdf  ompl_planning.yaml
marsha_cell_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
marsha_cell_safety/: CMakeLists.txt  package.xml
marsha_cell_safety/config/: thor_safety.yaml  thor_safety_mediapipe.yaml
marsha_cell_safety/launch/: safety_mediapipe.launch  thor_safety.launch
marsha_cell_safety/src/: pose_transform.cpp
marsha_tests/: CMakeLists.txt  package.xml
marsha_tests/config/: human_simulator.yaml  simulation.yaml  ssm.yaml
marsha_tests/launch/: cell.launch  everything.launch  human_simulator.launch  simulation.launch  ssm.launch
marsha_tests/src/: simulation.cpp
